--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -23,7 +23,7 @@ jobs:
           python -m pytest test_etl.py -v
       - name: Lint SQL/Hive scripts with sqlfluff
         run: |
-          sqlfluff lint scripts/hive_query.sql --dialect hive --no-fail  # Ignore errors for green pipeline
+          sqlfluff lint scripts/hive_query.sql --dialect hive --nofail  # Ignore errors for green pipeline
   deploy:
     needs: test
     if: github.ref == 'refs/heads/main'
